--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "Install"]
 	path = Install
 	url = https://github.com/HengyueLi/Fortran_Install
+[submodule "Depe/FermionOperators"]
+	path = Depe/FermionOperators
+	url = https://github.com/HengyueLi/FermionOperators
